Doc/force-app/main/default/objects/Project_Access_Contact__c/Project_Access_Contact__c.object-meta.xml
<CustomObject>
    <label>Project Access Contact</label>
    <nameField>
        <displayFormat>PAC-{00000}</displayFormat>
        <label>Project Access Contacts Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Access Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>