Doc/force-app/main/default/objects/Project_Access_Contact__c/validationRules/System_access_set_to_Access_Granted.validationRule-meta.xml
<ValidationRule>
    <fullName>System_access_set_to_Access_Granted</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($Profile.Id=&quot;00e30000000bvR3AAI&quot;)&amp;&amp;
NOT(CONTAINS($Profile.Name, &quot;System Administrator&quot;)) &amp;&amp;
((ISCHANGED(Box__c) &amp;&amp; ISPICKVAL(Box__c, &quot;Access Granted&quot;)) ||
(ISCHANGED(Clarizen__c) &amp;&amp; ISPICKVAL(Clarizen__c, &quot;Access Granted&quot;)) ||
(ISCHANGED(JIRA__c) &amp;&amp; ISPICKVAL(JIRA__c, &quot;Access Granted&quot;)) ||
(ISCHANGED(Smartsheet__c) &amp;&amp; ISPICKVAL(Smartsheet__c, &quot;Access Granted&quot;)))</errorConditionFormula>
    <errorMessage>You can not manually set the access to &quot;Access Granted&quot;. The integration will take care of adjusting this value.</errorMessage>
</ValidationRule>